# clearpath_common-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
clearpath_bt_joy/: CHANGELOG.rst  package.xml  setup.py
clearpath_bt_joy/debian/: udev
clearpath_common/: package.xml
clearpath_common/launch/: platform_extras.launch.py
clearpath_control/: CHANGELOG.rst  package.xml
clearpath_control/launch/: control.launch.py
clearpath_customization/: CHANGELOG.rst  package.xml
clearpath_description/: CHANGELOG.rst  package.xml
clearpath_diagnostics/: CHANGELOG.rst
clearpath_diagnostics/config/: diagnostic_aggregator.yaml
clearpath_diagnostics/launch/: diagnostics.launch.py
clearpath_generator_common/: CHANGELOG.rst
clearpath_generator_common/bash/: generate_bash
clearpath_generator_common/clearpath_generator_common/: common.py
clearpath_generator_common/description/: sensors.py
clearpath_generator_common/discovery_server/: generate_discovery_server
clearpath_generator_common/param/: manipulators.py
clearpath_generator_common/semantic_description/: manipulators.py
clearpath_generator_common/vcan/: generate_vcan
clearpath_manipulators/: CHANGELOG.rst
clearpath_manipulators_description/: CHANGELOG.rst
clearpath_mounts_description/: CHANGELOG.rst
clearpath_platform_description/: package.xml
clearpath_platform_description/urdf/: common.urdf.xacro
clearpath_sensors_description/: CHANGELOG.rst
clearpath_sensors_description/meshes/: fixposition.stl  gnss_patch.stl
clearpath_sensors_description/urdf/: swiftnav_duro.urdf.xacro  wiferion.urdf.xacro
config/: diagnostic_updater.yaml  foxglove_bridge.yaml
config/a200/: control.yaml
config/a300/: teleop_ps5.yaml  teleop_xbox.yaml
config/dd100/: control.yaml
config/do100/: teleop_ps4.yaml  teleop_ps5.yaml
config/do150/: control.yaml  teleop_logitech.yaml  teleop_ps4.yaml  teleop_ps5.yaml
config/j100/: control.yaml
config/r100/: teleop_ps4.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/clearpath_diagnostics/: clearpath_diagnostic_labels.hpp  clearpath_diagnostic_updater.hpp
launch/: foxglove_bridge.launch.py
meshes/: gnss_helical.stl
rpm/: ros-jazzy-clearpath-bt-joy.spec  ros-jazzy-clearpath-common.spec  ros-jazzy-clearpath-diagnostics.spec  ros-jazzy-clearpath-generator-common.spec  ros-jazzy-clearpath-manipulators-description.spec  ros-jazzy-clearpath-platform-description.spec  ros-jazzy-clearpath-sensors-description.spec  template.spec
src/: clearpath_diagnostic_updater.cpp
urdf/: fixposition.urdf.xacro  gnss_antenna.urdf.xacro  post.urdf.xacro
urdf/arm/: franka.urdf.xacro
urdf/r100/: r100.urdf.xacro
(+24 files in other folders)
